# ex_trustfall

./: .gitignore  README.md  mix.exs  reproduce.exs  shell.nix
config/: config.exs
lib/: ex_trustfall.ex
native/ex_trustfall/: Cargo.toml  README.md
native/ex_trustfall/src/: lib.rs
native/rustler_elixir_fun_nif/: Cargo.toml
native/rustler_elixir_fun_nif/rustler_elixir_fun/: Cargo.toml
native/rustler_elixir_fun_nif/rustler_elixir_fun/src/: lib.rs
native/rustler_elixir_fun_nif/rustler_stored_term/: Cargo.toml
native/rustler_elixir_fun_nif/rustler_stored_term/src/: lib.rs
native/rustler_elixir_fun_nif/src/: lib.rs
test/: ex_trustfall_test.exs
