[package]
name = "rustler_elixir_fun_nif"
version = "0.3.0"
authors = ["Qqwy/Wiebe-Marten Wijnja"]
edition = "2018"

[lib]
name = "rustler_elixir_fun_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29"
rustler_sys = "2"
rustler_elixir_fun = { path = "rustler_elixir_fun" }
rustler_stored_term = { path = "rustler_stored_term" }
